--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@types/node": "^16.11.39",
     "@types/react": "^18.0.12",
     "@types/react-dom": "^18.0.5",
+    "classnames": "^2.3.1",
     "framer-motion": "^6.3.11",
     "http-proxy-middleware": "^2.0.6",
     "react": "^18.1.0",
